solve the bridge crossing problem

--- a/README.mkd
+++ b/README.mkd
@@ -5,3 +5,4 @@ Problems and solutions from book "Programming Challenges"
 
 A great site for reference: https://github.com/lbv/pc-code
 
+UVa username: cmb2
